tests/ui/unresolved/unresolved-asterisk-imports.stderr
error[E0432]: unresolved import `nonexistent_crate`
  --> $DIR/unresolved-asterisk-imports.rs:1:5
   |
LL | use nonexistent_crate::*;
   |     ^^^^^^^^^^^^^^^^^ maybe a missing crate `nonexistent_crate`?
   |
   = help: consider adding `extern crate nonexistent_crate` to use the `nonexistent_crate` crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
