tests/ui/unresolved/unresolved-asterisk-imports.rs
use nonexistent_crate::*; //~ ERROR unresolved import `nonexistent_crate
use std as foo;

fn main() {}
